Fix motion line number alignment

--- a/client/src/app/site/motions/modules/motion-detail/components/amendment-create-wizard/amendment-create-wizard.component.scss
+++ b/client/src/app/site/motions/modules/motion-detail/components/amendment-create-wizard/amendment-create-wizard.component.scss
@@ -65,7 +65,7 @@
         &:after {
             content: attr(data-line-number);
             position: absolute;
-            top: 10px;
+            top: 13px;
             vertical-align: top;
             color: gray;
             font-size: 12px;
